# DFMacrosGenerator

./: .pre-commit-config.yaml  LICENSE  README.md  brush.py  cursor.py  df_macros_generator.py  pyproject.toml
df_macros_generator/: application.py  main.py  settings.py
df_macros_generator/entities/: brush.py  matrix.py  point.py
examples/: round_with_bubles.mak
gimp-plugin/: prepare_layers.py
test/: .gitignore
