[tool.poetry]
name = "df-macros-generator"
version = "0.1.0"
description = "Generates macros by image"
authors = ["Ilya Chichak <ilyachch@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "df_macros_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
types-pillow = "^9.4.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
