[tool.poetry]
name = "df-macros-generator"
version = "0.1.0"
description = "Generates macros by image"
authors = ["Ilya Chichak <ilyachch@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "df_macros_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
types-pillow = "^9.4.0.0"
mypy = "^0.991"
flake8 = "^6.0.0"
pre-commit = "^2.21.0"
flake8-pyproject = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 99
atomic = true
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
python_version = 3.10
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 99
max-complexity = 10
