[tool.poetry]
name = "df-macros-generator"
version = "1.0.0"
description = "Generates macros by image"
authors = ["Ilya Chichak <ilyachch@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "df_macros_generator"}]
repository = "https://github.com/ilyachch/DFMacrosGenerator"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.scripts]
df-macros-generator = "df_macros_generator.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
types-pillow = "^9.4.0.0"
mypy = "^0.991"
flake8 = "^6.0.0"
pre-commit = "^2.21.0"
flake8-pyproject = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 99
atomic = true
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
python_version = 3.10
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true

[tool.flake8]
max-line-length = 99
max-complexity = 6
